--- a/Tests/report.html
+++ b/Tests/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,10192],[],[[5,0,6,[7],[1,4872,3062],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,10020],[],[[5,0,6,[7],[1,3885,3783],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*AmazonSearch","*C:\\Users\\ett21010\\Desktop\\Projectbase\\Tests\\AmazonSearch.robot","*AmazonSearch.robot","*<p>Basic Search Functionality\x3c/p>","*Verify Search Fuction of Amazon","*<p>This test case verifies the basic Search\x3c/p>","*Functionality"]);
+window.output["strings"] = window.output["strings"].concat(["*","*AmazonSearch","*C:\\Users\\ett21016\\Desktop\\ProjectbaseforAzure\\Tests\\AmazonSearch.robot","*AmazonSearch.robot","*<p>Basic Search Functionality\x3c/p>","*Verify Search Fuction of Amazon","*<p>This test case verifies the basic Search\x3c/p>","*Functionality"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:03","fail":0,"label":"Functionality","pass":1,"skip":0}],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"AmazonSearch","name":"AmazonSearch","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:04","fail":0,"label":"Functionality","pass":1,"skip":0}],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"AmazonSearch","name":"AmazonSearch","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1685599933507;
+window.output["baseMillis"] = 1685608908493;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10211;
+window.output["generated"] = 10037;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
