--- a/Tests/log.html
+++ b/Tests/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,10387],[],[[5,0,6,[7],[1,4519,3621],[[0,8,9,0,0,0,0,0,[1,4520,3619],[[0,10,11,0,12,13,0,0,[1,4520,430],[[4521,2,14]]],[0,15,11,0,16,17,0,0,[1,4950,3125],[[4951,2,18]]],[0,19,11,0,20,21,0,0,[1,8075,64],[[8139,2,22]]]]]]]],[[1,23,24,0,0,0,0,0,[1,239,4280],[[0,25,11,0,26,27,0,0,[1,240,4151],[[240,2,28],[246,2,29]]],[0,30,11,0,31,0,0,0,[1,4392,127],[]]]],[2,32,24,0,0,0,0,0,[1,8142,2245],[[0,33,11,0,34,0,0,0,[1,8142,2245],[]]]]],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,12147],[],[[5,0,6,[7],[1,4370,4216],[[0,8,9,0,0,0,0,0,[1,4373,4212],[[0,10,11,0,12,13,0,0,[1,4374,654],[[4376,2,14]]],[0,15,11,0,16,17,0,0,[1,5029,3486],[[5030,2,18]]],[0,19,11,0,20,21,0,0,[1,8515,70],[[8585,2,22]]]]]]]],[[1,23,24,0,0,0,0,0,[1,226,4144],[[0,25,11,0,26,27,0,0,[1,226,3832],[[226,2,28],[234,2,29]]],[0,30,11,0,31,0,0,0,[1,4058,312],[]]]],[2,32,24,0,0,0,0,0,[1,8588,3559],[[0,33,11,0,34,0,0,0,[1,8589,3558],[]]]]],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*AmazonSearch","*C:\\Users\\ett21016\\Desktop\\ProjectbaseforAzure\\Tests\\AmazonSearch.robot","*AmazonSearch.robot","*<p>Basic Search Functionality\x3c/p>","*Verify Search Fuction of Amazon","*<p>This test case verifies the basic Search\x3c/p>","*Functionality","*Verify search result","*Homepage_keywords","*Input Text","*SeleniumLibrary","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${INPUTITEMXPATH}, ${INPUTITEM}","*Typing text 'laptop' into text field '//*[@id=\"twotabsearchtextbox\"]'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${CLICKSEARCHXPATH}","*Clicking element '//input[@id='nav-search-submit-button']'.","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*results","*Current page contains text 'results'.","*Start test","*Common_Keywords","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'chrome' to base url '<a href=\"https://www.amazon.com/\">https://www.amazon.com/\x3c/a>'.","*Applicable driver not found; attempting to install with Selenium Manager (Beta)","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Complete testcase","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*AmazonSearch","*C:\\Users\\ett21016\\Desktop\\ProjectbaseforAzure\\Tests\\AmazonSearch.robot","*AmazonSearch.robot","*<p>Basic Search Functionality\x3c/p>","*Verify Search Fuction of Amazon","*<p>This test case verifies the basic Search\x3c/p>","*Functionality","*Verify search result","*Homepage_keywords","*Input Text","*SeleniumLibrary","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${INPUTITEMXPATH}, ${INPUTITEM}","*Typing text 'laptop' into text field 'id:twotabsearchtextbox'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${CLICKSEARCHXPATH}","*Clicking element '//input[@id='nav-search-submit-button']'.","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*results","*Current page contains text 'results'.","*Start test","*Common_Keywords","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'chrome' to base url '<a href=\"https://www.amazon.com/\">https://www.amazon.com/\x3c/a>'.","*Applicable driver not found; attempting to install with Selenium Manager (Beta)","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Complete testcase","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:04","fail":0,"label":"Functionality","pass":1,"skip":0}],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"AmazonSearch","name":"AmazonSearch","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:04","fail":0,"label":"Functionality","pass":1,"skip":0}],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"AmazonSearch","name":"AmazonSearch","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1685609325086;
+window.output["baseMillis"] = 1685609790128;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10403;
+window.output["generated"] = 12171;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
