--- a/Tests/log.html
+++ b/Tests/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,12147],[],[[5,0,6,[7],[1,4370,4216],[[0,8,9,0,0,0,0,0,[1,4373,4212],[[0,10,11,0,12,13,0,0,[1,4374,654],[[4376,2,14]]],[0,15,11,0,16,17,0,0,[1,5029,3486],[[5030,2,18]]],[0,19,11,0,20,21,0,0,[1,8515,70],[[8585,2,22]]]]]]]],[[1,23,24,0,0,0,0,0,[1,226,4144],[[0,25,11,0,26,27,0,0,[1,226,3832],[[226,2,28],[234,2,29]]],[0,30,11,0,31,0,0,0,[1,4058,312],[]]]],[2,32,24,0,0,0,0,0,[1,8588,3559],[[0,33,11,0,34,0,0,0,[1,8589,3558],[]]]]],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,61273],[],[[5,0,6,[7],[1,5426,53481],[[0,8,9,0,10,11,0,0,[1,5428,50000],[[55428,2,12]]],[0,13,14,0,0,0,0,0,[1,55428,3477],[[0,15,16,0,17,18,0,0,[1,55428,88],[[55429,2,19]]],[0,20,16,0,21,22,0,0,[1,55516,3351],[[55517,2,23]]],[0,24,16,0,25,26,0,0,[1,58867,38],[[58905,2,27]]]]]]]],[[1,28,29,0,0,0,0,0,[1,265,5161],[[0,30,16,0,31,32,0,0,[1,265,5014],[[266,2,33],[274,2,34]]],[0,35,16,0,36,0,0,0,[1,5279,147],[]]]],[2,37,29,0,0,0,0,0,[1,58910,2363],[[0,38,16,0,39,0,0,0,[1,58911,2362],[]]]]],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*AmazonSearch","*C:\\Users\\ett21016\\Desktop\\ProjectbaseforAzure\\Tests\\AmazonSearch.robot","*AmazonSearch.robot","*<p>Basic Search Functionality\x3c/p>","*Verify Search Fuction of Amazon","*<p>This test case verifies the basic Search\x3c/p>","*Functionality","*Verify search result","*Homepage_keywords","*Input Text","*SeleniumLibrary","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${INPUTITEMXPATH}, ${INPUTITEM}","*Typing text 'laptop' into text field 'id:twotabsearchtextbox'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${CLICKSEARCHXPATH}","*Clicking element '//input[@id='nav-search-submit-button']'.","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*results","*Current page contains text 'results'.","*Start test","*Common_Keywords","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'chrome' to base url '<a href=\"https://www.amazon.com/\">https://www.amazon.com/\x3c/a>'.","*Applicable driver not found; attempting to install with Selenium Manager (Beta)","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Complete testcase","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*AmazonSearch","*C:\\Users\\ett21016\\Desktop\\ProjectbaseforAzure\\Tests\\AmazonSearch.robot","*AmazonSearch.robot","*<p>Basic Search Functionality\x3c/p>","*Verify Search Fuction of Amazon","*<p>This test case verifies the basic Search\x3c/p>","*Functionality","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*50s","*Slept 50 seconds","*Verify search result","*Homepage_keywords","*Input Text","*SeleniumLibrary","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${INPUTITEMXPATH}, ${INPUTITEM}","*Typing text 'laptop' into text field 'id:twotabsearchtextbox'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${CLICKSEARCHXPATH}","*Clicking element '//input[@id='nav-search-submit-button']'.","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*results","*Current page contains text 'results'.","*Start test","*Common_Keywords","*Open Browser","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'chrome' to base url '<a href=\"https://www.amazon.com/\">https://www.amazon.com/\x3c/a>'.","*Applicable driver not found; attempting to install with Selenium Manager (Beta)","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Complete testcase","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:04","fail":0,"label":"Functionality","pass":1,"skip":0}],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"AmazonSearch","name":"AmazonSearch","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:53","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:53","fail":0,"label":"Functionality","pass":1,"skip":0}],[{"elapsed":"00:01:01","fail":0,"id":"s1","label":"AmazonSearch","name":"AmazonSearch","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1685609790128;
+window.output["baseMillis"] = 1685614629347;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12171;
+window.output["generated"] = 61291;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
